syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message ValueRequest {
    int32 firstValue = 2;
    int32 lastValue = 3;
}

message ValueMessage {
    int32 value = 2;
}

message Empty {}

service RemoteDBService {
    rpc getValues(ValueRequest) returns (stream ValueMessage);
}
